# paper-dl

./: README.md  paper_dl.toml.example  pyproject.toml
paper_dl/: __init__.py  cli.py  config.py  models.py
paper_dl/access/: checker.py
paper_dl/download/: downloader.py  storage.py
paper_dl/metadata/: extractor.py
paper_dl/search/: arxiv.py  base.py  chemrxiv.py  core.py  crossref.py  manager.py  openalex.py  pubmed.py  semantic_scholar.py
paper_dl/utils/: author_filter.py  dedup.py
